--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/otica_banco?useTimezone=true&serverTimezone=America/Fortaleza
-spring.datasource.username=root
-spring.datasource.password=root
 
+# Configuração do DataSource - Utilizando a princípio configuração local
+# Adicionar um usuário e seus privilégios no Workbench
+spring.datasource.url=jdbc:mysql://localhost:3306/otica_banco 
+spring.datasource.username=adm_otica
+spring.datasource.password=adm_otica1234
+
+# Configuração do Hibernate - Update atualiza os dados do banco sempre que possível
 spring.jpa.hibernate.ddl-auto=update
+
+# Configuração da JPA
 spring.jpa.show-sql=true
