Configuração banco aws

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 # Configuração do DataSource - Utilizando a princípio configuração local
 # Adicionar um usuário e seus privilégios no Workbench
-spring.datasource.url=jdbc:mysql://localhost:3306/otica_banco 
-spring.datasource.username=adm_otica
-spring.datasource.password=adm_otica1234
+spring.datasource.url=jdbc:mysql://database-otica.clg7jd2uod2j.sa-east-1.rds.amazonaws.com/otica_banco 
+spring.datasource.username=admin
+spring.datasource.password=newlook2532
 
 # Configuração do Hibernate - Update atualiza os dados do banco sempre que possível
 spring.jpa.hibernate.ddl-auto=update
